Fix modal display overflow on mobile (#1114)

--- a/packages/itwinui-css/src/dialog/dialog.scss
+++ b/packages/itwinui-css/src/dialog/dialog.scss
@@ -171,7 +171,8 @@ $iui-dialogue-resizable-min-height: 7.75rem; // 7.75rem = 124px = title bar heig
   padding: 0 var(--iui-size-m);
   overflow-y: auto;
   overflow-y: overlay;
-  max-height: calc(100vh - 6.75rem); // 6.75rem = 108px = button height + paddings + bottom bar
+  max-height: calc(100vh - 6.75rem); //6.75rem = 108px = button height + paddings + bottom bar
+  max-height: calc(100dvh - 6.75rem);
 }
 
 @mixin iui-dialog-button-bar {
